[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/fonts/combat_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/GUI/CombatGUI.gd" type="Script" id=2]

[node name="Combat UI" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 140.0
margin_top = 20.0
margin_right = 1140.0
margin_bottom = 220.0
custom_fonts/font = ExtResource( 1 )
text = "what is the meaning of life"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 135.468
margin_top = 260.432
margin_right = 135.468
margin_bottom = 260.432
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_right = 400.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Button"]
margin_right = 400.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 1 )
text = "a"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="."]
margin_left = 754.367
margin_top = 262.114
margin_right = 754.367
margin_bottom = 262.114
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control2"]
margin_right = 400.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control2/Button"]
margin_right = 400.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 1 )
text = "b"
align = 1
valign = 1
autowrap = true

[node name="Control3" type="Control" parent="."]
margin_left = 133.786
margin_top = 477.383
margin_right = 133.786
margin_bottom = 477.383
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control3"]
margin_right = 400.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control3/Button"]
margin_right = 400.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 1 )
text = "c"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control4" type="Control" parent="."]
margin_left = 752.686
margin_top = 479.065
margin_right = 752.686
margin_bottom = 479.065
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control4"]
margin_right = 400.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control4/Button"]
margin_right = 400.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 1 )
text = "d"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/Button" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Control2/Button" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control3/Button" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Control4/Button" to="." method="_on_Button4_pressed"]
